--- a/term1week7.ipynb
+++ b/term1week7.ipynb
@@ -2397,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2475,7 +2475,7 @@
        "3"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2579,7 +2579,7 @@
        "3"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2670,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2703,7 +2703,7 @@
        "3"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2719,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2741,16 +2741,16 @@
      "output_type": "stream",
      "text": [
       "Function works correctly for n = 1000\n",
-      "Function executes quickly for n = 1000\n"
+      "Function does not seem to execute quickly for n = 1000; can you make it more efficient?\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2760,6 +2760,35 @@
     "# 1 Mark\n",
     "test3 = (1000,True)\n",
     "question4_timed(_globals,test3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/10 iterations complete\n",
+      "2/10 iterations complete\n",
+      "3/10 iterations complete\n",
+      "4/10 iterations complete\n",
+      "5/10 iterations complete\n",
+      "6/10 iterations complete\n",
+      "7/10 iterations complete\n",
+      "8/10 iterations complete\n",
+      "9/10 iterations complete\n",
+      "10/10 iterations complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "for i in range(10):\n",
+    "    print(f\"{i+1}/10 iterations complete\")\n",
+    "    time.sleep(1)"
    ]
   },
   {
